# backlog

./: .gitignore
7-harness/: AGENTS.md  (+2 more)
7-harness/common-employee/: .AGENTS.md.swp  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  pyproject.toml
7-harness/common-employee/docs/: PLANS.md  RELIABILITY.md  SECURITY.md  pre-kickoff-checklist.md
7-harness/common-employee/docs/agent-behaviors/: auto-resolution.md  communication.md  decision-logging.md  human-in-the-loop.md  project-management.md  reporting.md  solution-lookup.md  ticket-triage.md
7-harness/common-employee/docs/design-docs/: agent-roles.md  core-beliefs.md  data-flow.md  design-freeze-matrix.md  index.md  knowledge-pipeline.md
7-harness/common-employee/docs/domain-knowledge/: _index.md  escalation-matrix.md  glossary.md
7-harness/common-employee/docs/exec-plans/: README.md
7-harness/common-employee/docs/integrations/: auth-strategy.md  confluence.md  jira.md  outlook.md  teams.md
7-harness/common-employee/docs/plans/: 2026-04-06-autonomous-runtime-design.md  2026-04-06-autonomous-runtime-implementation.md  2026-04-06-jira-service-design.md  2026-04-06-jira-service-implementation.md  2026-04-06-web-ui-console-design.md  2026-04-06-web-ui-console-implementation.md  2026-04-07-confluence-service-design.md  2026-04-07-confluence-service-implementation.md  2026-04-07-graph-delegated-design.md  2026-04-07-graph-delegated-implementation.md  2026-04-07-graph-messaging-design.md  (+2 more)
7-harness/common-employee/examples/: operational-ticket.json
7-harness/common-employee/tests/: test_runtime_service.py
(+201 files in other folders)
