[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "common-employee-runtime"
version = "0.1.0"
description = "Autonomous runtime foundation for common-employee ticket orchestration."
requires-python = ">=3.14"

[project.scripts]
common-employee-runtime = "common_employee_runtime.cli:main"
common-employee-web = "common_employee_runtime.web:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
